--- a/git_homework/w5d3_hmwk/hogwarts/index.html
+++ b/git_homework/w5d3_hmwk/hogwarts/index.html
@@ -9,13 +9,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title> Hogwart 5.3 </title>
     <script src = "app.js"></script>            <!-- app.js (jquery link console log message) -->
     <link rel="stylesheet" href="main.css" />   <!-- css is linked -->
 </head>
+
 <body>
     <div id="container">
-
+    <title>Hogwart 5.3</title>                   <!-- title w/n div tag-->
     </div>
 </body>
 </html>
